# mocha

./: .clang-tidy  .gitattributes  .gitignore  README.md  flake.nix  package-lock.json  pyproject.toml  signals.svwf  tool_data.json
.github/workflows/: ci.yml  download-bitstream.yml  release.yml
doc/proj/: i2c.md  stages.md  uart.md  xbar_peri.md
doc/ref/: arch.md  dev_guide.md
doc/verif/: stages.md
hw/data/: common_project_cfg.hjson
hw/dv/vip/axi4_vip/: axi4_vip.core  axi4_vip_cfg.svh  axi4_vip_defines.svh  axi4_vip_driver.svh  axi4_vip_env.svh  axi4_vip_env_cfg.svh  axi4_vip_if.sv  axi4_vip_item.svh  axi4_vip_manager_agent.svh  axi4_vip_master_agent.svh  axi4_vip_monitor.svh  axi4_vip_pkg.sv  axi4_vip_sequencer.svh  axi4_vip_slave_agent.svh  axi4_vip_subordinate_agent.svh  axi4_vip_types.svh
hw/ip/common_cells/: common_cells.core
hw/ip/common_cells/rtl/: fifo_v3.sv  (+4 more)
hw/top_chip/: REUSE.toml  chip_mocha_genesys2.core  top_bus_pkg.core  top_chip_system.core
hw/top_chip/data/: chip_testplan.hjson  config_genesys2.xdc  gpio_cfg.hjson  pins_genesys2.xdc  placement_genesys2.xdc  timing_genesys2.xdc
hw/top_chip/dv/: README.md  REUSE.toml  mocha_sim_cfgs.hjson  top_chip_sim.core  top_chip_sim_cfg.hjson
hw/top_chip/formal/: top_chip_fpv_ip_cfgs.hjson
hw/top_chip/ip/: gen_xilinx_ip.tcl  mig_genesys2_mocha.prj
hw/top_chip/lint/: top_chip.vlt  top_chip_system.vlt
hw/top_chip/rtl/: axi_frame_buffer.sv  axi_sram.sv  chip_mocha_genesys2.sv  clkgen_xil7series.sv  jtag_id_pkg.sv  top_bus_pkg.sv  top_chip_system.sv  top_pkg.sv  video_tx.sv
hw/top_chip/tmp_sim_cfg/: rv_dm_base_sim_cfg.hjson
nix/: fpga.nix
rdl/: mocha.rdl
rdl/ip/: entropy_src.rdl  ethernet.rdl  gpio.rdl  i2c.rdl  kmac.rdl  rom_ctrl.rdl  rstmgr.rdl  sim_ctrl.rdl  spi_host.rdl
sw/: cheri_toolchain.cmake
sw/cmake/: opensbi.cmake  tests.cmake  uboot.cmake
sw/device/: CMakeLists.txt
sw/device/bootrom/: CMakeLists.txt  bootrom.c
sw/device/devicetree/: mocha.S  mocha.dts
sw/device/examples/: CMakeLists.txt  ethernet_example.c  hello_world.c  i2c.c
sw/device/examples/tag_check/: CMakeLists.txt  link.ld
sw/device/lib/: constants.h
sw/device/lib/hal/: CMakeLists.txt  clkmgr.c  clkmgr.h  dv.h  ethernet.c  ethernet.h  frame_buffer.h  gpio.c  gpio.h  hart.h  i2c.c  i2c.h  mailbox.c  mailbox.h  mmio.h  mocha.c  mocha.h  mocha_irq.h  plic.c  plic.h  pwrmgr.c  pwrmgr.h  reg_field.h  rom_ctrl.c  rom_ctrl.h  spi_device.c  spi_device.h  spi_host.h  timer.c  timer.h  uart.c  uart.h
sw/device/lib/hal/autogen/: ethernet.h  i2c.h  kmac.h  rom_ctrl.h  spi_host.h
sw/device/lib/test_framework/: CMakeLists.txt  dv_log.c  dv_log.h  main.c
sw/device/tests/: CMakeLists.txt
sw/device/tests/clkmgr/: smoketest.c
sw/device/tests/dram/: CMakeLists.txt  dram_test_rom.c
sw/device/tests/ethernet/: smoketest.c
sw/device/tests/gpio/: smoketest.c
sw/device/tests/i2c/: device_tx_rx_test.c  host_test.c  host_tx_rx_test.c  i2c_host_test.c  smoketest.c  temperature_sensor_test.c
sw/device/tests/mailbox/: smoketest.c
sw/device/tests/opensbi/: CMakeLists.txt  test_payload.S
sw/device/tests/plic/: smoketest.c
sw/device/tests/pwrmgr/: pwrmgr_smoke_test.c  smoketest.c
sw/device/tests/rom_ctrl/: mem_init_file.vmem  smoketest.c
sw/device/tests/spi_device/: smoketest.c
sw/device/tests/spi_host/: lorem_text.h  sdcard_tests.c
sw/device/tests/test_framework/: smoketest.c
sw/device/tests/timer/: interrupt.c  smoketest.c
sw/device/tests/uart/: smoketest.c
util/: 99-openfpgaloader.rules  artefacts.py  build_sw_collateral_for_sim.py  clang_format.py  clang_tidy.py  debug_test.sh  fpga_runner.py  gdb_response.exp  genesys2-openocd-cfg.tcl  rdlgenerator.py  tool_schema_check.sh  tool_schema_validate.py  vendor.py  verilator-openocd-cfg.tcl  verilator_runner.py  verilator_trace_trigger.py
util/openocd/board/: lowrisc-mocha-verilator.cfg
util/openocd/interface/: sim-jtagdpi.cfg
(+144 files in other folders)
